infra/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qard-admin
  labels:
    app: qard-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qard-admin
  template:
    metadata:
      labels:
        app: qard-admin
    spec:
      containers:
        - name: admin
          image: qard/admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qard-admin-svc
spec:
  selector:
    app: qard-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
