infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qard-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.qard.pk
        - admin.qard.pk
      secretName: qard-tls
  rules:
    - host: api.qard.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qard-backend-svc
                port:
                  number: 80
    - host: admin.qard.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qard-admin-svc
                port:
                  number: 80
